zakura-state/src/service/finalized_state/disk_format/tests/snapshots/header_root_auth_frontier_raw_data@testnet_2.snap
---
source: zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "",
    v: "0102000000181ac2d6dc0ae73a82d7db472ac2879a7c24d8b12e5f73efc33a55549ea4f10000",
  ),
]
