zakura-state/src/service/finalized_state/disk_format/tests/snapshots/highest_completed_checkpoint_raw_data@mainnet_2.snap
---
source: zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "",
    v: "010000000008ce3d9731b000c08338455c8a4a6bd05da16e26b11daa1b917184ece80f0400",
  ),
]
