zakura-state/src/service/finalized_state/disk_format/tests/snapshots/highest_completed_checkpoint_raw_data@testnet_1.snap
---
source: zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "",
    v: "0100000000382c4a332661c7ed0671f32a34d724619f086c61873bce7c99859dd9920aa605",
  ),
]
